--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Professional audio studio in Leipzig - Recording, Mixing, Mastering">
     <title>Sounds-of-the-Times-Studios | Home</title>
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <!-- Header with Navigation -->
