--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Sounds-of-the-Times-Studios | Home</title>
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <!-- Header with Navigation -->
