update styles for media gallery in styles.css

--- a/media.html
+++ b/media.html
@@ -46,6 +46,40 @@
                 <p class="subtitle">Explore our studio projects and recordings</p>
             </div>
         </section>
+
+        <!-- Media Gallery Section -->
+        <section class="media-gallery">
+            <div class="container">
+                <h2>Recent Projects</h2>
+                <div class="gallery-grid">
+                    <figure class="gallery-item">
+                        <img src="https://www.vecteezy.com/photo/29633346-skillful-male-singer-with-eyes-closed-in-casual-clothes-with-headphones-and-music-recorded-on-laptop-in-modern-lighting-studio-with-professional-microphone" alt="Artist recording vocals in our studio" class="gallery-img">
+                        <figcaption class="gallery-caption">Vocal Recording Session - 2023</figcaption>
+                    </figure>
+                    <figure class="gallery-item">
+                        <img src="assets/images/mixing.jpg" alt="Mixing session with analog equipment" class="gallery-img">
+                        <figcaption class="gallery-caption">Analog Mixing Session</figcaption>
+                    </figure>
+                    <figure class="gallery-item">
+                        <img src="assets/images/band-recording.jpg" alt="Band performing in our live room" class="gallery-img">
+                        <figcaption class="gallery-caption">Live Band Recording</figcaption>
+                    </figure>
+                    <figure class="gallery-item">
+                        <img src="assets/images/mastering.jpeg" alt="Mastering session with our engineer" class="gallery-img">
+                        <figcaption class="gallery-caption">Final Mastering</figcaption>
+                    </figure>
+                    <figure class="gallery-item">
+                        <img src="assets/images/sound-design.jpeg" alt="Sound design workstation" class="gallery-img">
+                        <figcaption class="gallery-caption">Sound Design Project</figcaption>
+                    </figure>
+                    <figure class="gallery-item">
+                        <img src="assets/images/playback.jpg" alt="Artist listening to playback" class="gallery-img">
+                        <figcaption class="gallery-caption">Playback Session</figcaption>
+                    </figure>
+                </div>
+            </div>
+        </section>
+
         <!-- Audio Samples Section -->
         <section class="audio-samples">
             <div class="container">
