--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Professional audio studio in Leipzig - Recording, Mixing, Mastering">
     <title>Sounds-of-the-Times-Studios | Home</title>
+     <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -12,7 +17,7 @@
 <body>
     <!-- Skip to Content Link for Accessibility -->
     <a class="skip-link" href="#main-content">Skip to main content</a>
-    
+
     <!-- Header with Navigation -->
     <header class="header">
         <div class="container">
