Add images to image folder

--- a/media.html
+++ b/media.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <!-- Stylesheet -->
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -58,7 +59,7 @@
                 <h2>Recent Projects</h2>
                 <div class="gallery-grid">
                     <figure class="gallery-item">
-                        <img src="https://www.vecteezy.com/photo/29633346-skillful-male-singer-with-eyes-closed-in-casual-clothes-with-headphones-and-music-recorded-on-laptop-in-modern-lighting-studio-with-professional-microphone" alt="Artist recording vocals in our studio" class="gallery-img">
+                        <img src="assets/images/vocals.jpeg" alt="Artist recording vocals in our studio" class="gallery-img">
                         <figcaption class="gallery-caption">Vocal Recording Session - 2023</figcaption>
                     </figure>
                     <figure class="gallery-item">
