--- a/media.html
+++ b/media.html
@@ -129,7 +129,43 @@
         </section>
     <!-- Footer -->
     <footer class="footer">
-        <!-- Same footer as index.html -->
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-about">
+                    <h3>About Us</h3>
+                    <p>Sounds-of-the-Times-Studios is Leipzig's premier recording facility, serving artists and producers since 2020.</p>
+                </div>
+                <div class="footer-links">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="media.html">Media</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-contact">
+                    <h3>Contact</h3>
+                    <address>
+                        Studio Street 42<br>
+                        04109 Leipzig, Germany<br>
+                        Phone: +49 341 1234567<br>
+                        Email: info@soundsofthetimes.com
+                    </address>
+                </div>
+                <div class="footer-social">
+                    <h3>Follow Us</h3>
+                    <div class="social-links">
+                        <a href="https://facebook.com" target="blank" rel="noopener" aria-label="Facebook (opens in a new tab)"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://instagram.com" target="blank" rel="noopener" aria-label="Instagram (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+                        <a href="https://twitter.com" target="blank" rel="noopener" aria-label="Twitter (opens in a new tab)"><i class="fab fa-twitter"></i></a>
+                        <a href="https://youtube.com" target="blank" rel="noopener" aria-label="YouTube (opens in a new tab)"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 Sounds-of-the-Times-Studios. All rights reserved.</p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
