Add content to Readme.md file

--- a/media.html
+++ b/media.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Media gallery from Sounds-of-the-Times-Studios">
-    <title>Sounds-of-the-Times-Studios | Media</title>
+    <title>Sounds of the Times Studios | Media</title>
      <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
@@ -60,7 +60,7 @@
                 <div class="gallery-grid">
                     <figure class="gallery-item">
                         <img src="assets/images/vocals.jpeg" alt="Artist recording vocals in our studio" class="gallery-img">
-                        <figcaption class="gallery-caption">Vocal Recording Session - 2023</figcaption>
+                        <figcaption class="gallery-caption">Vocal Recording Session</figcaption>
                     </figure>
                     <figure class="gallery-item">
                         <img src="assets/images/mixing.jpg" alt="Mixing session with analog equipment" class="gallery-img">
@@ -133,7 +133,7 @@
             <div class="footer-grid">
                 <div class="footer-about">
                     <h3>About Us</h3>
-                    <p>Sounds-of-the-Times-Studios is Leipzig's premier recording facility, serving artists and producers since 2020.</p>
+                    <p>Sounds of the Times Studios is Leipzig's premier recording facility, serving artists and producers since 2020.</p>
                 </div>
                 <div class="footer-links">
                     <h3>Quick Links</h3>
@@ -163,7 +163,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Sounds-of-the-Times-Studios. All rights reserved.</p>
+                <p>&copy; 2025 Sounds of the Times Studios. All rights reserved.</p>
             </div>
         </div>
     </footer>
