--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contact Sounds-of-the-Times-Studios in Leipzig">
-    <title>Sounds-of-the-Times-Studios | Contact</title>
+    <title>Sounds of the Times Studios | Contact</title>
      <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
@@ -138,7 +138,7 @@
             <div class="footer-grid">
                 <div class="footer-about">
                     <h3>About Us</h3>
-                    <p>Sounds-of-the-Times-Studios is Leipzig's premier recording facility, serving artists and producers since 2020.</p>
+                    <p>Sounds of the Times Studios is Leipzig's premier recording facility, serving artists and producers since 2020.</p>
                 </div>
                 <div class="footer-links">
                     <h3>Quick Links</h3>
@@ -168,7 +168,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Sounds-of-the-Times-Studios. All rights reserved.</p>
+                <p>&copy; 2025 Sounds of the Times Studios. All rights reserved.</p>
             </div>
         </div>
     </footer>
