--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Professional audio studio in Leipzig - Recording, Mixing, Mastering">
-    <title>Sounds-of-the-Times-Studios | Home</title>
+    <title>Sounds of the Times Studios | Home</title>
      <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -48,7 +48,7 @@
         <!-- Hero Section -->
         <section class="hero">
             <div class="container">
-                <h1>Sounds-of-the-Times-Studios</h1>
+                <h1>Sounds of the Times Studios</h1>
                 <p class="subtitle">Leipzig's Premier Recording Studio</p>
             </div>
         </section>
@@ -59,7 +59,7 @@
                 <h2>About Our Studio</h2>
                 <div class="about-grid">
                     <div class="about-text">
-                        <p>Founded in 2020, Sounds-of-the-Times-Studios has been at the heart of Leipzig's vibrant music scene. Our state-of-the-art facility offers world-class recording, mixing, and mastering services.</p>
+                        <p>Founded in 2020, Sounds of the Times Studios has been at the heart of Leipzig's vibrant music scene. Our state-of-the-art facility offers world-class recording, mixing, and mastering services.</p>
                         <p>We specialize in creating the perfect acoustic environment for artists across all genres. Our team of experienced engineers is dedicated to bringing your creative vision to life with technical excellence and artistic sensitivity.</p>
                         <p>Located in a historic building in Leipzig's city center, our studio combines modern technology with classic analog warmth.</p>
                     </div>
@@ -114,7 +114,7 @@
             <div class="footer-grid">
                 <div class="footer-about">
                     <h3>About Us</h3>
-                    <p>Sounds-of-the-Times-Studios is Leipzig's premier recording facility, serving artists and producers since 2020.</p>
+                    <p>Sounds of the Times Studios is Leipzig's premier recording facility, serving artists and producers since 2020.</p>
                 </div>
                 <div class="footer-links">
                     <h3>Quick Links</h3>
@@ -144,7 +144,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Sounds-of-the-Times-Studios. All rights reserved.</p>
+                <p>&copy; 2025 Sounds of the Times Studios. All rights reserved.</p>
             </div>
         </div>
     </footer>
