Change large .jpeg images to .webp images

--- a/media.html
+++ b/media.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -59,15 +59,15 @@
                 <h2>Recent Projects</h2>
                 <div class="gallery-grid">
                     <figure class="gallery-item">
-                        <img src="assets/images/vocals.jpeg" alt="Artist recording vocals in our studio" class="gallery-img">
+                        <img src="assets/images/vocals.webp" alt="Artist recording vocals in our studio" class="gallery-img">
                         <figcaption class="gallery-caption">Vocal Recording Session</figcaption>
                     </figure>
                     <figure class="gallery-item">
-                        <img src="assets/images/mixing.jpg" alt="Mixing session with analog equipment" class="gallery-img">
+                        <img src="assets/images/mixing.webp" alt="Mixing session with analog equipment" class="gallery-img">
                         <figcaption class="gallery-caption">Analog Mixing Session</figcaption>
                     </figure>
                     <figure class="gallery-item">
-                        <img src="assets/images/band-recording.jpg" alt="Band performing in our live room" class="gallery-img">
+                        <img src="assets/images/band-recording.webp" alt="Band performing in our live room" class="gallery-img">
                         <figcaption class="gallery-caption">Live Band Recording</figcaption>
                     </figure>
                     <figure class="gallery-item">
@@ -79,7 +79,7 @@
                         <figcaption class="gallery-caption">Sound Design Project</figcaption>
                     </figure>
                     <figure class="gallery-item">
-                        <img src="assets/images/playback.jpg" alt="Artist listening to playback" class="gallery-img">
+                        <img src="assets/images/playback.webp" alt="Artist listening to playback" class="gallery-img">
                         <figcaption class="gallery-caption">Playback Session</figcaption>
                     </figure>
                 </div>
