Change name of logo.png to logo.PNG

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="assets/images/logo.png" alt="Sounds-of-the-Times-Studios Logo" width="180">
+                    <img src="assets/images/logo.PNG" alt="Sounds-of-the-Times-Studios Logo" width="180">
                 </a>
             </div>
             
