Repair errors in media.html file after error messageson WC3

--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
                             style="border:0;" 
                             allowfullscreen="" 
                             loading="lazy" 
-                            title="Map to Sounds-of-the-Times-Studios in Leipzig">
+                            title="Map to Sounds of the Times Studios in Leipzig">
                     </iframe>
                 </div>
             </div>
