--- a/media.html
+++ b/media.html
@@ -52,8 +52,10 @@
                 <p class="subtitle">Explore our studio projects and recordings</p>
             </div>
         </section>
+    </main>    
 
         <!-- Media Gallery Section -->
+         <!-- Images from Vecteezy.com, Logo created with Looka-->
         <section class="media-gallery">
             <div class="container">
                 <h2>Recent Projects</h2>
@@ -109,7 +111,7 @@
                         <h3>Rap</h3>
                         <p>Rap music production sample</p>
                         <audio controls>
-                            <source src="assets/audio/Flows With L_Sura.mp3" type="audio/mpeg">
+                            <source src="assets/audio/Flows_With_L_Sura.mp3" type="audio/mpeg">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
